--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=76a06ef773015a5261c2",
+    "/css/app.css": "/css/app.css?id=9452313d2924b47e98e7",
+    "/js/home.js": "/js/home.js?id=8c58757f362c719f1305"
 }
