Datatable-oracle whick worked

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=76a06ef773015a5261c2",
-    "/css/app.css": "/css/app.css?id=9452313d2924b47e98e7",
-    "/js/home.js": "/js/home.js?id=8c58757f362c719f1305"
+    "/js/app.js": "/js/app.js?id=98989c84ec99655d4ab4",
+    "/css/app.css": "/css/app.css?id=5e10c644cb87dd669e2e",
+    "/js/home.js": "/js/home.js?id=8c58757f362c719f1305",
+    "/js/user.js": "/js/user.js?id=2a6f71620de4e5f46e9a"
 }
