--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     },
     "dependencies": {
         "chart.js": "^2.9.3",
+        "datatables.net-bs4": "^1.10.21",
+        "datatables.net-buttons-bs4": "^1.6.2",
+        "datatables.net-responsive-bs4": "^2.2.5",
         "feather-icons": "^4.28.0"
     }
 }
