--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.15.0",
         "chart.js": "^2.9.3",
         "datatables.net-bs4": "^1.10.21",
         "datatables.net-buttons-bs4": "^1.6.2",
         "datatables.net-responsive-bs4": "^2.2.5",
-        "feather-icons": "^4.28.0"
+        "datatables.net-select-bs4": "^1.3.1"
     }
 }
