--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=98989c84ec99655d4ab4",
-    "/css/app.css": "/css/app.css?id=5e10c644cb87dd669e2e",
-    "/js/home.js": "/js/home.js?id=8c58757f362c719f1305",
-    "/js/user.js": "/js/user.js?id=2a6f71620de4e5f46e9a"
+    "/js/app.js": "/js/app.js?id=050cea8092005e01d073",
+    "/css/app.css": "/css/app.css?id=9357be95cb3127b85c54",
+    "/js/home.js": "/js/home.js?id=8c58757f362c719f1305"
 }
