--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=e130774684c54d6f70c6",
-    "/css/app.css": "/css/app.css?id=97cb9c11d302155c06c1",
-    "/js/home.js": "/js/home.js?id=8c58757f362c719f1305"
+    "/js/app.js": "/js/app.js?id=a039b6685b25fbc57b5f",
+    "/css/app.css": "/css/app.css?id=38346ab4bab3c9ff4911"
 }
