--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "vue-router": "^3.3.2",
         "vuetify": "^2.2.30",
         "vuex": "^3.4.0"
     }
