--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@mdi/font": "^5.3.45",
-        "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
-        "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10",
         "webpack-livereload-plugin": "^1.2.0"
     },
     "dependencies": {
+        "@mdi/font": "^5.3.45",
+        "axios": "^0.19.2",
+        "lodash": "^4.17.15",
+        "vue": "^2.6.11",
+        "vue-lodash": "^2.1.2",
         "vue-router": "^3.3.2",
         "vuetify": "^2.2.30",
         "vuex": "^3.4.0"
