--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@mdi/font": "^5.3.45",
         "axios": "^0.19.2",
         "lodash": "^4.17.15",
+        "vee-validate": "^3.3.1",
         "vue": "^2.6.11",
         "vue-lodash": "^2.1.2",
         "vue-router": "^3.3.2",
