--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=0387d27f1c200440d55c",
-    "/css/app.css": "/css/app.css?id=3462204912f6bda7044e"
+    "/js/app.js": "/js/app.js?id=6eee71ebbdf03d1f9e4b",
+    "/css/app.css": "/css/app.css?id=c79cc61f8ecec6fb9927",
+    "/js/app.js.map": "/js/app.js.map?id=e8e90981ca34c097e5d2"
 }
