--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=6eee71ebbdf03d1f9e4b",
-    "/css/app.css": "/css/app.css?id=c79cc61f8ecec6fb9927",
-    "/js/app.js.map": "/js/app.js.map?id=e8e90981ca34c097e5d2"
+    "/js/app.js": "/js/app.js?id=05247d4e77280cc74eee",
+    "/css/app.css": "/css/app.css?id=3462204912f6bda7044e"
 }
