--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/genmotor/formula.genmotorcycles.com/
-    - /bin/cp -R public $DEPLOYPATH
+    - /bin/cp -R public/. $DEPLOYPATH
