--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,5 +3,5 @@ deployment:
   tasks:
     - export BACK_END_PATH=/home/genmotor/formula.genmotorcycles.com/backend/
     - export FRONT_END_PATH=/home/genmotor/formula.genmotorcycles.com/
-    - /bin/rsync -avr --progress --exclude '.git/' --exclude 'public/' . $BACK_END_PATH
-    - /bin/rsync -avr --progress --exclude 'index.php' public/ $FRONT_END_PATH
+    - /bin/rsync -avr --exclude '.git/' --exclude 'public/' . $BACK_END_PATH
+    - /bin/rsync -avr --exclude 'index.php' public/ $FRONT_END_PATH
