--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=05247d4e77280cc74eee",
-    "/css/app.css": "/css/app.css?id=3462204912f6bda7044e"
+    "/js/app.js": "/js/app.js?id=f42ed6eafdb124055315",
+    "/css/app.css": "/css/app.css?id=c79cc61f8ecec6fb9927",
+    "/js/app.js.map": "/js/app.js.map?id=4e4d38e8fa080efcb910"
 }
