--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=46d6e9cdc8e1779fcb67",
-    "/css/app.css": "/css/app.css?id=c79cc61f8ecec6fb9927",
-    "/js/app.js.map": "/js/app.js.map?id=71ae8e1c6dfa3542c5d0"
+    "/js/app.js": "/js/app.js?id=919f5e5c17955f7002ae",
+    "/css/app.css": "/css/app.css?id=3462204912f6bda7044e"
 }
