--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=2c2766a8576d7da7ef54",
-    "/css/app.css": "/css/app.css?id=3462204912f6bda7044e"
+    "/js/app.js": "/js/app.js?id=8f81e21db02da9e3b47f",
+    "/css/app.css": "/css/app.css?id=c79cc61f8ecec6fb9927",
+    "/js/app.js.map": "/js/app.js.map?id=eac5afacbe713b8a4de8"
 }
