--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=a89ad7a444357436613f",
-    "/css/app.css": "/css/app.css?id=c79cc61f8ecec6fb9927",
-    "/js/app.js.map": "/js/app.js.map?id=093c69607a37293e1600"
+    "/js/app.js": "/js/app.js?id=e7717af091dae0c4336b",
+    "/css/app.css": "/css/app.css?id=c79cc61f8ecec6fb9927"
 }
