--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vue": "^2.6.11",
         "vue-currency-filter": "^5.1.0",
         "vue-fragment": "^1.5.1",
+        "vue-fullscreen": "^2.1.6",
         "vue-lodash": "^2.1.2",
         "vue-moment": "^4.1.0",
         "vue-router": "^3.3.2",
