--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,18 +1,19 @@
 {
-    "/js/app.js": "/js/app.js?id=6ea3c96e36eab1b38f56",
-    "/css/app.css": "/css/app.css?id=c79cc61f8ecec6fb9927",
-    "/js/auth-forget.js": "/js/auth-forget.js?id=22aa41d0368cee101db8",
-    "/js/auth-login.js": "/js/auth-login.js?id=6aa468300004b5df712d",
-    "/js/auth-reset.js": "/js/auth-reset.js?id=e98e6ee91253402774e0",
-    "/js/auth-verify.js": "/js/auth-verify.js?id=2a379ead244d75cf3ca3",
-    "/js/dashboard.js": "/js/dashboard.js?id=41f368b16f93bcc16ba6",
-    "/js/error.js": "/js/error.js?id=69ea9f1f15ffd50adc51",
-    "/js/formula.js": "/js/formula.js?id=6b2475ebf43521c1778a",
-    "/js/home.js": "/js/home.js?id=1014e4bea2e273964c48",
-    "/js/price.js": "/js/price.js?id=b01803eb46eeb07177be",
-    "/js/product.js": "/js/product.js?id=103ac08d709aaa152d2c",
-    "/js/profile.js": "/js/profile.js?id=a2c67e700c467de870cc",
-    "/js/report.js": "/js/report.js?id=a30e26aa99220123c078",
-    "/js/setting.js": "/js/setting.js?id=f399a191e7b51a14036b",
-    "/js/user.js": "/js/user.js?id=b64c4cedb5e93e1aa914"
+    "/js/app.js": "/js/app.js?id=de05fbb70aeaf6804480",
+    "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
+    "/js/auth-forget.js": "/js/auth-forget.js?id=79b4ed79b52900300e0e",
+    "/js/auth-login.js": "/js/auth-login.js?id=fce6a81cf0a27a4ab91d",
+    "/js/auth-reset.js": "/js/auth-reset.js?id=4ecf79e489094e4a211a",
+    "/js/auth-verify.js": "/js/auth-verify.js?id=f6dc6083a56dfb64a3dd",
+    "/js/dashboard.js": "/js/dashboard.js?id=a7397518837d938c3a15",
+    "/js/error.js": "/js/error.js?id=c6f79b450d24bda81a53",
+    "/js/formula.js": "/js/formula.js?id=b5ece47bd7e2c0d9de98",
+    "/js/formula~price~product~user.js": "/js/formula~price~product~user.js?id=defe06ae4f28babc3635",
+    "/js/home.js": "/js/home.js?id=2a6fbae59ba2b4974a31",
+    "/js/price.js": "/js/price.js?id=8af2dda8759a35d7713b",
+    "/js/product.js": "/js/product.js?id=0a97a4b83aa00c6c3727",
+    "/js/profile.js": "/js/profile.js?id=3ba2aa749fe5ce00e3fa",
+    "/js/report.js": "/js/report.js?id=5b3a0263da198518fb80",
+    "/js/setting.js": "/js/setting.js?id=02b468a01ad52e8baa0f",
+    "/js/user.js": "/js/user.js?id=13883560b6b4a63ecb12"
 }
