--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=137b8b4c81dcdcbc213d",
+    "/js/app.js": "/js/app.js?id=729d0d1312b708ff7b1a",
     "/css/app.css": "/css/app.css?id=c79cc61f8ecec6fb9927",
     "/js/auth-forget.js": "/js/auth-forget.js?id=22aa41d0368cee101db8",
     "/js/auth-login.js": "/js/auth-login.js?id=6aa468300004b5df712d",
@@ -9,10 +9,11 @@
     "/js/error.js": "/js/error.js?id=69ea9f1f15ffd50adc51",
     "/js/formula.js": "/js/formula.js?id=b7a44c7b8624754e15d6",
     "/js/home.js": "/js/home.js?id=1014e4bea2e273964c48",
-    "/js/price.js": "/js/price.js?id=4ba957d8dec6d69e5108",
-    "/js/product.js": "/js/product.js?id=0e547ea2f27fe2bf5302",
-    "/js/profile.js": "/js/profile.js?id=4b6ee9ec54909fa20398",
-    "/js/report.js": "/js/report.js?id=a30e26aa99220123c078",
-    "/js/setting.js": "/js/setting.js?id=f399a191e7b51a14036b",
-    "/js/user.js": "/js/user.js?id=ccd5b5111e1115a22c57"
+    "/js/policy.js": "/js/policy.js?id=97f99f85c9572be948c5",
+    "/js/price.js": "/js/price.js?id=e7276d1ebb3228c87639",
+    "/js/product.js": "/js/product.js?id=fec1f6cab85712bfe8ca",
+    "/js/profile.js": "/js/profile.js?id=b058b5965d1ec193ff97",
+    "/js/report.js": "/js/report.js?id=696f5ed897a664f805b4",
+    "/js/setting.js": "/js/setting.js?id=7ef9898cfd9f2a6db7a6",
+    "/js/user.js": "/js/user.js?id=cc43e9bccc0cdc18e504"
 }
