--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@mdi/font": "^5.3.45",
         "axios": "^0.19.2",
+        "is-ua-webview": "^1.0.5",
         "lodash": "^4.17.19",
         "pluralize": "^8.0.0",
         "vee-validate": "^3.3.1",
