Moved top bar to pages

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,19 +1,20 @@
 {
-    "/js/app.js": "/js/app.js?id=14b41840a620cf255837",
-    "/css/app.css": "/css/app.css?id=c79cc61f8ecec6fb9927",
-    "/js/auth-forget.js": "/js/auth-forget.js?id=22aa41d0368cee101db8",
-    "/js/auth-login.js": "/js/auth-login.js?id=6aa468300004b5df712d",
-    "/js/auth-reset.js": "/js/auth-reset.js?id=e98e6ee91253402774e0",
-    "/js/auth-verify.js": "/js/auth-verify.js?id=2a379ead244d75cf3ca3",
-    "/js/dashboard.js": "/js/dashboard.js?id=2aa445a2df31a4dddf85",
-    "/js/error.js": "/js/error.js?id=69ea9f1f15ffd50adc51",
-    "/js/formula.js": "/js/formula.js?id=4423ee9690c46074102b",
-    "/js/home.js": "/js/home.js?id=1014e4bea2e273964c48",
-    "/js/policy.js": "/js/policy.js?id=97f99f85c9572be948c5",
-    "/js/price.js": "/js/price.js?id=b5d843265c5aa467dcd3",
-    "/js/product.js": "/js/product.js?id=cf0a2a6199e1774e5e59",
-    "/js/profile.js": "/js/profile.js?id=b058b5965d1ec193ff97",
-    "/js/report.js": "/js/report.js?id=696f5ed897a664f805b4",
-    "/js/setting.js": "/js/setting.js?id=7ef9898cfd9f2a6db7a6",
-    "/js/user.js": "/js/user.js?id=f10ef300b97b01ca3056"
+    "/js/app.js": "/js/app.js?id=47fa20121f4f9d60afd5",
+    "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
+    "/js/auth-forget.js": "/js/auth-forget.js?id=edd8f6fb94cf410fecb6",
+    "/js/auth-login.js": "/js/auth-login.js?id=710d622f56984de43f10",
+    "/js/auth-reset.js": "/js/auth-reset.js?id=8112266ca0819466e96f",
+    "/js/auth-verify.js": "/js/auth-verify.js?id=3bbae6109026f5ff7e28",
+    "/js/dashboard.js": "/js/dashboard.js?id=e17ed72158689010df6d",
+    "/js/dashboard~formula~price~product~profile~user.js": "/js/dashboard~formula~price~product~profile~user.js?id=c72e62a2c8693ca01843",
+    "/js/error.js": "/js/error.js?id=8bdd483e1e249df1b266",
+    "/js/formula.js": "/js/formula.js?id=ae07f5ff143297f86790",
+    "/js/formula~price~product~user.js": "/js/formula~price~product~user.js?id=00eb413d88e96817d71f",
+    "/js/home.js": "/js/home.js?id=2d6510ad26b183247435",
+    "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
+    "/js/price.js": "/js/price.js?id=b6f0f31d7a14b0bbec42",
+    "/js/product.js": "/js/product.js?id=aeb7ffc2b636b02179ff",
+    "/js/profile.js": "/js/profile.js?id=54cde6b4f4dc64b421e6",
+    "/js/setting.js": "/js/setting.js?id=ef4d8353b6bee56526cb",
+    "/js/user.js": "/js/user.js?id=f368c46675cfa9ef26dc"
 }
