Simplify table footer text

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,18 +1,20 @@
 {
-    "/js/app.js": "/js/app.js?id=0904e30cbea644b371f8",
-    "/css/app.css": "/css/app.css?id=c79cc61f8ecec6fb9927",
-    "/js/auth-forget.js": "/js/auth-forget.js?id=e7668ed5fae9be358553",
-    "/js/auth-login.js": "/js/auth-login.js?id=081d2944d48952e456ff",
-    "/js/auth-reset.js": "/js/auth-reset.js?id=2e511b6d2edb1ceabc5f",
-    "/js/auth-verify.js": "/js/auth-verify.js?id=da7f295101fa668242fb",
-    "/js/dashboard.js": "/js/dashboard.js?id=9a72337be2d44e1bb027",
-    "/js/error.js": "/js/error.js?id=800344f4b96b9ee256e9",
-    "/js/formula.js": "/js/formula.js?id=2eddb1786ab438377def",
-    "/js/home.js": "/js/home.js?id=9e3e0b530c7c1c889833",
-    "/js/policy.js": "/js/policy.js?id=4f9b794140d4256fca8f",
-    "/js/price.js": "/js/price.js?id=173b16430acbdbc90b8c",
-    "/js/product.js": "/js/product.js?id=959abbeacb55271ffff1",
-    "/js/profile.js": "/js/profile.js?id=64cd4a6233a05ccdd1ac",
-    "/js/setting.js": "/js/setting.js?id=8ebeaa552930a548f365",
-    "/js/user.js": "/js/user.js?id=51982b546922856b8bdf"
+    "/js/app.js": "/js/app.js?id=87733d79770ffe0e4165",
+    "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
+    "/js/auth-forget.js": "/js/auth-forget.js?id=edd8f6fb94cf410fecb6",
+    "/js/auth-login.js": "/js/auth-login.js?id=710d622f56984de43f10",
+    "/js/auth-reset.js": "/js/auth-reset.js?id=8112266ca0819466e96f",
+    "/js/auth-verify.js": "/js/auth-verify.js?id=3bbae6109026f5ff7e28",
+    "/js/dashboard.js": "/js/dashboard.js?id=3ec9d0ce41ef427a6ecb",
+    "/js/dashboard~formula~price~product~profile~user.js": "/js/dashboard~formula~price~product~profile~user.js?id=89abbde85af9895240d1",
+    "/js/error.js": "/js/error.js?id=8bdd483e1e249df1b266",
+    "/js/formula.js": "/js/formula.js?id=8796a5163a4f0ed9e603",
+    "/js/formula~price~product~user.js": "/js/formula~price~product~user.js?id=81b1e181b7e15b0af9ac",
+    "/js/home.js": "/js/home.js?id=2d6510ad26b183247435",
+    "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
+    "/js/price.js": "/js/price.js?id=177852c099235b6f37c4",
+    "/js/product.js": "/js/product.js?id=4593207203e1c03cf845",
+    "/js/profile.js": "/js/profile.js?id=a3d7eb0b73e02d5ded10",
+    "/js/setting.js": "/js/setting.js?id=ef4d8353b6bee56526cb",
+    "/js/user.js": "/js/user.js?id=0a6e9627515203ba3a29"
 }
