Changed 'product' to 'material'

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,18 +1,20 @@
 {
-    "/js/app.js": "/js/app.js?id=8c7b0a10c5db49b7033d",
-    "/css/app.css": "/css/app.css?id=c79cc61f8ecec6fb9927",
-    "/js/auth-forget.js": "/js/auth-forget.js?id=3ec80926b362e6bd5474",
-    "/js/auth-login.js": "/js/auth-login.js?id=4101d93aca64d65c6097",
-    "/js/auth-reset.js": "/js/auth-reset.js?id=710c19560880a4a580b8",
-    "/js/auth-verify.js": "/js/auth-verify.js?id=7c158c1ed22138b2e526",
-    "/js/dashboard.js": "/js/dashboard.js?id=25592150ab7fbbbfaed7",
-    "/js/error.js": "/js/error.js?id=2df7743931d9d36fb827",
-    "/js/formula.js": "/js/formula.js?id=03e859a344182731c79c",
-    "/js/home.js": "/js/home.js?id=9e3e0b530c7c1c889833",
-    "/js/policy.js": "/js/policy.js?id=4f9b794140d4256fca8f",
-    "/js/price.js": "/js/price.js?id=a549369fa780677feb80",
-    "/js/product.js": "/js/product.js?id=2748f3e0c0156a7f9fc6",
-    "/js/profile.js": "/js/profile.js?id=c687a01b61cec971c356",
-    "/js/setting.js": "/js/setting.js?id=8ebeaa552930a548f365",
-    "/js/user.js": "/js/user.js?id=d53a3330100acb321d7a"
+    "/js/app.js": "/js/app.js?id=42cb5225283232f49939",
+    "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
+    "/js/auth-forget.js": "/js/auth-forget.js?id=feb036866831a91bbdd4",
+    "/js/auth-login.js": "/js/auth-login.js?id=9e53808f65da2c914e78",
+    "/js/auth-reset.js": "/js/auth-reset.js?id=9e5e7b83a8535f8d0f73",
+    "/js/auth-verify.js": "/js/auth-verify.js?id=7d08ec53d722b4c65bdc",
+    "/js/dashboard.js": "/js/dashboard.js?id=b01a0e403e7ab948818f",
+    "/js/dashboard~formula~material~price~profile~user.js": "/js/dashboard~formula~material~price~profile~user.js?id=ef7b91afb7aac0f3a649",
+    "/js/error.js": "/js/error.js?id=ea35edd797a3e4d603b3",
+    "/js/formula.js": "/js/formula.js?id=45e1cc96d486ac3616fa",
+    "/js/formula~material~price~user.js": "/js/formula~material~price~user.js?id=e11a8b353b1beb531d35",
+    "/js/home.js": "/js/home.js?id=2d6510ad26b183247435",
+    "/js/material.js": "/js/material.js?id=90fefaf2dec5cad6d436",
+    "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
+    "/js/price.js": "/js/price.js?id=1cad3ebe5bf9b9c912b9",
+    "/js/profile.js": "/js/profile.js?id=ce1f4ec69fa43011a1e7",
+    "/js/setting.js": "/js/setting.js?id=ef4d8353b6bee56526cb",
+    "/js/user.js": "/js/user.js?id=6cda197578119c2dfa6e"
 }
