Remove Price page, change 'Percent' to 'Portion'

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,19 +1,18 @@
 {
-    "/js/app.js": "/js/app.js?id=42cb5225283232f49939",
+    "/js/app.js": "/js/app.js?id=2ac70e66aeeb5187c47d",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
     "/js/auth-forget.js": "/js/auth-forget.js?id=feb036866831a91bbdd4",
     "/js/auth-login.js": "/js/auth-login.js?id=9e53808f65da2c914e78",
     "/js/auth-reset.js": "/js/auth-reset.js?id=9e5e7b83a8535f8d0f73",
     "/js/auth-verify.js": "/js/auth-verify.js?id=7d08ec53d722b4c65bdc",
-    "/js/dashboard.js": "/js/dashboard.js?id=b01a0e403e7ab948818f",
-    "/js/dashboard~formula~material~price~profile~user.js": "/js/dashboard~formula~material~price~profile~user.js?id=ef7b91afb7aac0f3a649",
+    "/js/dashboard.js": "/js/dashboard.js?id=4056bfbc4e9258f2b95a",
+    "/js/dashboard~formula~material~profile~user.js": "/js/dashboard~formula~material~profile~user.js?id=e10b3fd853f1a4d52572",
     "/js/error.js": "/js/error.js?id=ea35edd797a3e4d603b3",
-    "/js/formula.js": "/js/formula.js?id=45e1cc96d486ac3616fa",
-    "/js/formula~material~price~user.js": "/js/formula~material~price~user.js?id=e11a8b353b1beb531d35",
+    "/js/formula.js": "/js/formula.js?id=9b65e74458249a621b5e",
+    "/js/formula~material~user.js": "/js/formula~material~user.js?id=dae9535112f410128a35",
     "/js/home.js": "/js/home.js?id=2d6510ad26b183247435",
     "/js/material.js": "/js/material.js?id=90fefaf2dec5cad6d436",
     "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
-    "/js/price.js": "/js/price.js?id=1cad3ebe5bf9b9c912b9",
     "/js/profile.js": "/js/profile.js?id=ce1f4ec69fa43011a1e7",
     "/js/setting.js": "/js/setting.js?id=ef4d8353b6bee56526cb",
     "/js/user.js": "/js/user.js?id=6cda197578119c2dfa6e"
