--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,20 +1,18 @@
 {
-    "/js/app.js": "/js/app.js?id=66d422d5544455338a64",
+    "/js/app.js": "/js/app.js?id=00d74d30ebdb9b3298d3",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
-    "/js/auth-forget.js": "/js/auth-forget.js?id=feb036866831a91bbdd4",
-    "/js/auth-login.js": "/js/auth-login.js?id=9e53808f65da2c914e78",
-    "/js/auth-reset.js": "/js/auth-reset.js?id=9e5e7b83a8535f8d0f73",
-    "/js/auth-verify.js": "/js/auth-verify.js?id=7d08ec53d722b4c65bdc",
-    "/js/dashboard.js": "/js/dashboard.js?id=98770bf1550928d42e61",
-    "/js/dashboard~formula~material~profile~user.js": "/js/dashboard~formula~material~profile~user.js?id=1d6d95c689822091ad87",
-    "/js/error.js": "/js/error.js?id=ea35edd797a3e4d603b3",
-    "/js/formula.js": "/js/formula.js?id=57dc021b0a8e672b40f7",
-    "/js/formula~material~user.js": "/js/formula~material~user.js?id=78bddf613be0dca557a2",
-    "/js/home.js": "/js/home.js?id=2d6510ad26b183247435",
-    "/js/material.js": "/js/material.js?id=030ce2858ab3694ad7e7",
-    "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
-    "/js/profile.js": "/js/profile.js?id=f1dd32e0dd0b9a383427",
-    "/js/user.js": "/js/user.js?id=c1d7806b3221f9c30fc3",
-    "/js/dashboard~formula~profile~user.js": "/js/dashboard~formula~profile~user.js?id=70815a65c26e73d6791f",
-    "/js/formula~user.js": "/js/formula~user.js?id=8faf2be8a938cf0c968f"
+    "/js/auth-forget.js": "/js/auth-forget.js?id=6253941fe03189e1e300",
+    "/js/auth-login.js": "/js/auth-login.js?id=dfdbe94185e73dcc8ca6",
+    "/js/auth-reset.js": "/js/auth-reset.js?id=a8dd3cbeb484a9790cb1",
+    "/js/auth-verify.js": "/js/auth-verify.js?id=638df39bd20a2f340f69",
+    "/js/dashboard.js": "/js/dashboard.js?id=b85f64736f46cd9e0cd7",
+    "/js/dashboard~formula~material~profile~user.js": "/js/dashboard~formula~material~profile~user.js?id=35b597b2d5b2856b4132",
+    "/js/error.js": "/js/error.js?id=1c1598388830e0ebebce",
+    "/js/formula.js": "/js/formula.js?id=c637631075dbf43fad28",
+    "/js/formula~material~user.js": "/js/formula~material~user.js?id=84e4c853cb78f980667b",
+    "/js/home.js": "/js/home.js?id=3cb1fe88d17028c662aa",
+    "/js/material.js": "/js/material.js?id=91fa51cc5faefdf70b36",
+    "/js/policy.js": "/js/policy.js?id=784a9c218cc72420ed03",
+    "/js/profile.js": "/js/profile.js?id=f9bfd340ac53081469f6",
+    "/js/user.js": "/js/user.js?id=78422308f9ebb097829d"
 }
