--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,18 +1,22 @@
 {
-    "/js/app.js": "/js/app.js?id=175f4fd3a03ebecd5e05",
+    "/js/app.js": "/js/app.js?id=daa81ed961ed4932dcbe",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
     "/js/auth-forget.js": "/js/auth-forget.js?id=feb036866831a91bbdd4",
-    "/js/auth-login.js": "/js/auth-login.js?id=9e53808f65da2c914e78",
-    "/js/auth-reset.js": "/js/auth-reset.js?id=9e5e7b83a8535f8d0f73",
+    "/js/auth-login.js": "/js/auth-login.js?id=c570ce7ec7fe25c9a35d",
+    "/js/auth-reset.js": "/js/auth-reset.js?id=f9b3c85b82560873a6e7",
     "/js/auth-verify.js": "/js/auth-verify.js?id=7d08ec53d722b4c65bdc",
     "/js/dashboard.js": "/js/dashboard.js?id=98770bf1550928d42e61",
-    "/js/dashboard~formula~material~profile~user.js": "/js/dashboard~formula~material~profile~user.js?id=484ba95fe122b390e837",
-    "/js/error.js": "/js/error.js?id=ea35edd797a3e4d603b3",
-    "/js/formula.js": "/js/formula.js?id=41b2f5dbc8c60707f368",
-    "/js/formula~material~user.js": "/js/formula~material~user.js?id=e1d811f64ef0db823146",
+    "/js/dashboard~formula~material~profile~user.js": "/js/dashboard~formula~material~profile~user.js?id=9a73b0083ea1281dca78",
+    "/js/error.js": "/js/error.js?id=ab3061da3ee0ebb262c8",
+    "/js/formula.js": "/js/formula.js?id=e9878d5ccc0085665480",
+    "/js/formula~material~user.js": "/js/formula~material~user.js?id=3343d139f8f5ba1c8943",
     "/js/home.js": "/js/home.js?id=2d6510ad26b183247435",
-    "/js/material.js": "/js/material.js?id=98a5cb81d1c553ad2015",
+    "/js/material.js": "/js/material.js?id=7d31378b60dbd106994f",
     "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
-    "/js/profile.js": "/js/profile.js?id=dc82e1bdbab98b2a8380",
-    "/js/user.js": "/js/user.js?id=7699c5c112552875875f"
+    "/js/profile.js": "/js/profile.js?id=a374b926d7e1b826c584",
+    "/js/user.js": "/js/user.js?id=771aaa7bba0aa35814cc",
+    "/js/dashboard~material~profile~user.js": "/js/dashboard~material~profile~user.js?id=af4900edfe5eca718668",
+    "/js/material~user.js": "/js/material~user.js?id=89be7df4ec48b74887fb",
+    "/js/dashboard~formula~profile~user.js": "/js/dashboard~formula~profile~user.js?id=859c805bbddb767f1dd5",
+    "/js/formula~user.js": "/js/formula~user.js?id=cf15aeb02ca32d5a257d"
 }
