--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,17 +1,18 @@
 {
-    "/js/app.js": "/js/app.js?id=28b5dafcdd06c8cedfc4",
+    "/js/app.js": "/js/app.js?id=d7e895c7e0871cf8765f",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
     "/js/auth-forget.js": "/js/auth-forget.js?id=7b689069f4491fc8c4f9",
     "/js/auth-login.js": "/js/auth-login.js?id=ae4edb9749c4a01ac4ba",
     "/js/auth-reset.js": "/js/auth-reset.js?id=d0b9df7665c672a59046",
     "/js/auth-verify.js": "/js/auth-verify.js?id=cce6f077e931f09f2c61",
-    "/js/dashboard.js": "/js/dashboard.js?id=63f52077b8173c2ef497",
-    "/js/dashboard~formula~material~profile~user.js": "/js/dashboard~formula~material~profile~user.js?id=7158a3e4835f6df82938",
+    "/js/dashboard.js": "/js/dashboard.js?id=181c7b43bd070525c2d8",
+    "/js/dashboard~formula~material~matter~profile~user.js": "/js/dashboard~formula~material~matter~profile~user.js?id=7111e232b6a9f2177804",
     "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
     "/js/formula.js": "/js/formula.js?id=2f4ab473a082e3cb5e6d",
-    "/js/formula~material~user.js": "/js/formula~material~user.js?id=04919bf4b8637111ec7c",
+    "/js/formula~material~matter~user.js": "/js/formula~material~matter~user.js?id=647179066fdfc26df213",
     "/js/home.js": "/js/home.js?id=2d6510ad26b183247435",
-    "/js/material.js": "/js/material.js?id=b116ee300db408b9fc8c",
+    "/js/material.js": "/js/material.js?id=34ddaa4e31d77371ffc2",
+    "/js/matter.js": "/js/matter.js?id=e624b4b6b0ea1461a504",
     "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
     "/js/profile.js": "/js/profile.js?id=a374b926d7e1b826c584",
     "/js/user.js": "/js/user.js?id=f39e2d2eb34ef1d5706e"
