Simplify eloquent, request, and navigation

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,29 +1,20 @@
 {
-    "/js/app.js": "/js/app.js?id=575b771398085410fb5a",
+    "/js/app.js": "/js/app.js?id=99da4dff87f7634ee864",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
-    "/js/auth-forget.js": "/js/auth-forget.js?id=7b689069f4491fc8c4f9",
-    "/js/auth-login.js": "/js/auth-login.js?id=ae4edb9749c4a01ac4ba",
-    "/js/auth-reset.js": "/js/auth-reset.js?id=d0b9df7665c672a59046",
-    "/js/auth-verify.js": "/js/auth-verify.js?id=cce6f077e931f09f2c61",
-    "/js/dashboard.js": "/js/dashboard.js?id=b94a82e517ac63f45f3f",
-    "/js/dashboard~formula~material~matter~profile~user.js": "/js/dashboard~formula~material~matter~profile~user.js?id=79c9e57e260abbad6330",
-    "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
-    "/js/formula.js": "/js/formula.js?id=2d3b77a251581b7c581f",
-    "/js/formula~material~matter~user.js": "/js/formula~material~matter~user.js?id=8d2097ed9efa1c4222ed",
-    "/js/home.js": "/js/home.js?id=2d6510ad26b183247435",
-    "/js/material.js": "/js/material.js?id=3be7370ac4ad2466f5d5",
-    "/js/matter.js": "/js/matter.js?id=6b856ec3a5627e24d402",
-    "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
-    "/js/profile.js": "/js/profile.js?id=aa4908fa442095746fcb",
-    "/js/user.js": "/js/user.js?id=a86d5a447824a26de3b8",
-    "/js/dashboard~formula~material~matter~profile.js": "/js/dashboard~formula~material~matter~profile.js?id=dd1b168ba631a59ff934",
-    "/js/formula~material~matter.js": "/js/formula~material~matter.js?id=aab12ecb481faa0f33c2",
     "/js/auth.forget.js": "/js/auth.forget.js?id=8cebf758990be7f4b5d8",
     "/js/auth.login.js": "/js/auth.login.js?id=ec3e2dde76f35eb193d3",
     "/js/auth.reset.js": "/js/auth.reset.js?id=b10bb74e8a0e9f477015",
     "/js/auth.verify.js": "/js/auth.verify.js?id=ff2dce2e44ee5ef60801",
+    "/js/dashboard.js": "/js/dashboard.js?id=fbea09c3c6b314820d94",
     "/js/dashboard~formula~material~matter~packer~profile~user.js": "/js/dashboard~formula~material~matter~packer~profile~user.js?id=743ab2ec6488b6748976",
+    "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
+    "/js/formula.js": "/js/formula.js?id=ea2745954f93fd9e9f8d",
     "/js/formula~material~matter~packer~user.js": "/js/formula~material~matter~packer~user.js?id=f74212eb959c282122b1",
     "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
-    "/js/packer.js": "/js/packer.js?id=0f43426474f6cc029921"
+    "/js/material.js": "/js/material.js?id=cf67a4a29dea78de922e",
+    "/js/matter.js": "/js/matter.js?id=bd123a07744f592ec885",
+    "/js/packer.js": "/js/packer.js?id=af8780bfd60f5143820d",
+    "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
+    "/js/profile.js": "/js/profile.js?id=aa4908fa442095746fcb",
+    "/js/user.js": "/js/user.js?id=e85644ac272371f5029e"
 }
