--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,25 +1,22 @@
 {
-    "/js/app.js": "/js/app.js?id=35ef06ca40256a5e47c8",
+    "/js/app.js": "/js/app.js?id=7cb85b41557662e92aba",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
     "/js/auth.forget.js": "/js/auth.forget.js?id=8cebf758990be7f4b5d8",
-    "/js/auth.login.js": "/js/auth.login.js?id=ec3e2dde76f35eb193d3",
-    "/js/auth.reset.js": "/js/auth.reset.js?id=b10bb74e8a0e9f477015",
+    "/js/auth.login.js": "/js/auth.login.js?id=e50bd5cbc295c2bf4a25",
+    "/js/auth.reset.js": "/js/auth.reset.js?id=9a3958a560d510dd33d6",
     "/js/auth.verify.js": "/js/auth.verify.js?id=ff2dce2e44ee5ef60801",
-    "/js/dashboard.js": "/js/dashboard.js?id=fbea09c3c6b314820d94",
-    "/js/dashboard~formula~material~matter~packer~profile~user.js": "/js/dashboard~formula~material~matter~packer~profile~user.js?id=743ab2ec6488b6748976",
+    "/js/dashboard.js": "/js/dashboard.js?id=cfc98499172680c3172a",
+    "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=8333ac8869fa6ba67dda",
     "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
-    "/js/formula.js": "/js/formula.js?id=018671212616566390af",
-    "/js/formula~material~matter~packer~user.js": "/js/formula~material~matter~packer~user.js?id=3363f813379b5c8e6fd2",
+    "/js/formula.js": "/js/formula.js?id=6057f2061b6c970d2532",
+    "/js/formula~material~matter~pack~package~packer~user.js": "/js/formula~material~matter~pack~package~packer~user.js?id=ec142185ce306e98aa97",
     "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
-    "/js/material.js": "/js/material.js?id=ad0feea16856ed130d7b",
-    "/js/matter.js": "/js/matter.js?id=bb964f31151958e2e56f",
-    "/js/packer.js": "/js/packer.js?id=bc60e12d36f03e2acd46",
+    "/js/material.js": "/js/material.js?id=c8cde98ff8e65e2665aa",
+    "/js/matter.js": "/js/matter.js?id=46f8ade724f03ccf905b",
+    "/js/pack.js": "/js/pack.js?id=4dd8277524d579764996",
+    "/js/package.js": "/js/package.js?id=450bfd7d15eb8ff984be",
+    "/js/packer.js": "/js/packer.js?id=73661ca151f007895a3e",
     "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
-    "/js/profile.js": "/js/profile.js?id=aa4908fa442095746fcb",
-    "/js/user.js": "/js/user.js?id=218efa3072fb8d637533",
-    "/js/dashboard~formula~material~matter~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~package~packer~profile~user.js?id=4d65044623480648866c",
-    "/js/formula~material~matter~package~packer~user.js": "/js/formula~material~matter~package~packer~user.js?id=64c0e6ff2faaa7aadb84",
-    "/js/package.js": "/js/package.js?id=2d9add5e82793713ddfb",
-    "/js/dashboard~formula~material~matter~package~profile~user.js": "/js/dashboard~formula~material~matter~package~profile~user.js?id=700bea5056500d7b791f",
-    "/js/formula~material~matter~package~user.js": "/js/formula~material~matter~package~user.js?id=266125eb8a76b3353f8b"
+    "/js/profile.js": "/js/profile.js?id=9a2e6e033f6c0fe985b4",
+    "/js/user.js": "/js/user.js?id=0756e91c8d447d4e14b5"
 }
