Added some mixins for DDRY

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,22 +1,25 @@
 {
-    "/js/app.js": "/js/app.js?id=d477ed99595245bc623f",
+    "/js/app.js": "/js/app.js?id=be3b89e9c6364a2dfedd",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
-    "/js/auth.forget.js": "/js/auth.forget.js?id=addc458e499b2cc57a1d",
-    "/js/auth.login.js": "/js/auth.login.js?id=7e6ec7d08aa12719c3c6",
-    "/js/auth.reset.js": "/js/auth.reset.js?id=11980e1c1676de3d1d3f",
-    "/js/auth.verify.js": "/js/auth.verify.js?id=222218c33af9ebec3745",
-    "/js/dashboard.js": "/js/dashboard.js?id=cfba0443cc9bb0f02f9c",
-    "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=26bd6ee3b012f3ca3764",
+    "/js/auth.forget.js": "/js/auth.forget.js?id=241c515e605a09009b80",
+    "/js/auth.login.js": "/js/auth.login.js?id=d8810bd617eb34a525fe",
+    "/js/auth.reset.js": "/js/auth.reset.js?id=8d3ce5169e971cba8541",
+    "/js/auth.verify.js": "/js/auth.verify.js?id=3231ab6e1d42c731f62f",
+    "/js/dashboard.js": "/js/dashboard.js?id=026c565d2edb600edf87",
+    "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=58c82581f08bb850c091",
     "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
-    "/js/formula.js": "/js/formula.js?id=1e6e4695d360171beed9",
-    "/js/formula~material~matter~pack~package~packer~user.js": "/js/formula~material~matter~pack~package~packer~user.js?id=1b3dad15c54dc78c16fa",
+    "/js/formula.js": "/js/formula.js?id=2aa74dfabda5c67bcfc9",
+    "/js/formula~material~matter~pack~package~packer~user.js": "/js/formula~material~matter~pack~package~packer~user.js?id=151bc21e1484d902a6c8",
     "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
-    "/js/material.js": "/js/material.js?id=9c3405f6f349af95de49",
-    "/js/matter.js": "/js/matter.js?id=8c280fc89af603d5c228",
-    "/js/pack.js": "/js/pack.js?id=83a28aa77cbee0eaab22",
-    "/js/package.js": "/js/package.js?id=0cd4e95870f2a03f0b71",
-    "/js/packer.js": "/js/packer.js?id=83d46afb3decc66893c1",
+    "/js/material.js": "/js/material.js?id=b23a36b30f63a94ae354",
+    "/js/matter.js": "/js/matter.js?id=75cb69dacc9be2d2deeb",
+    "/js/pack.js": "/js/pack.js?id=b72a6af19544df2a6113",
+    "/js/package.js": "/js/package.js?id=c3615810648fad2c8a19",
+    "/js/packer.js": "/js/packer.js?id=5e43130a5b8cada1a30e",
     "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
-    "/js/profile.js": "/js/profile.js?id=9a2e6e033f6c0fe985b4",
-    "/js/user.js": "/js/user.js?id=e64ff6258594701353a6"
+    "/js/profile.js": "/js/profile.js?id=a537b9881a42f017f4ee",
+    "/js/user.js": "/js/user.js?id=802c9e07d4954242cc8d",
+    "/js/dashboard~formula~material~matter~pack~package~packer~profile.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile.js?id=543351bed8b0ecf4d123",
+    "/js/formula~material~matter~pack~package~packer.js": "/js/formula~material~matter~pack~package~packer.js?id=fb34865e7f9bbfb38c1b",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=33d5e7ac35cf0bc596c5"
 }
