--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,25 +1,24 @@
 {
-    "/js/app.js": "/js/app.js?id=be3b89e9c6364a2dfedd",
+    "/js/app.js": "/js/app.js?id=fe4cbafd7038a65d8608",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
     "/js/auth.forget.js": "/js/auth.forget.js?id=241c515e605a09009b80",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=16457ce11621f9723b5e",
     "/js/auth.login.js": "/js/auth.login.js?id=d8810bd617eb34a525fe",
     "/js/auth.reset.js": "/js/auth.reset.js?id=8d3ce5169e971cba8541",
     "/js/auth.verify.js": "/js/auth.verify.js?id=3231ab6e1d42c731f62f",
     "/js/dashboard.js": "/js/dashboard.js?id=026c565d2edb600edf87",
     "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=58c82581f08bb850c091",
     "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
-    "/js/formula.js": "/js/formula.js?id=2aa74dfabda5c67bcfc9",
-    "/js/formula~material~matter~pack~package~packer~user.js": "/js/formula~material~matter~pack~package~packer~user.js?id=151bc21e1484d902a6c8",
+    "/js/formula.js": "/js/formula.js?id=e537812f843ee5c4a0c3",
     "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
-    "/js/material.js": "/js/material.js?id=b23a36b30f63a94ae354",
+    "/js/material.js": "/js/material.js?id=6cea21a52d69e8599e7c",
     "/js/matter.js": "/js/matter.js?id=75cb69dacc9be2d2deeb",
     "/js/pack.js": "/js/pack.js?id=b72a6af19544df2a6113",
-    "/js/package.js": "/js/package.js?id=c3615810648fad2c8a19",
+    "/js/package.js": "/js/package.js?id=1a3f9ad345d6be0eb567",
     "/js/packer.js": "/js/packer.js?id=5e43130a5b8cada1a30e",
     "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
-    "/js/profile.js": "/js/profile.js?id=a537b9881a42f017f4ee",
-    "/js/user.js": "/js/user.js?id=802c9e07d4954242cc8d",
-    "/js/dashboard~formula~material~matter~pack~package~packer~profile.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile.js?id=543351bed8b0ecf4d123",
-    "/js/formula~material~matter~pack~package~packer.js": "/js/formula~material~matter~pack~package~packer.js?id=fb34865e7f9bbfb38c1b",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=33d5e7ac35cf0bc596c5"
+    "/js/profile.js": "/js/profile.js?id=585044a8bc9c3b7efa3c",
+    "/js/user.js": "/js/user.js?id=141587cc716e9016b451",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~user.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~user.js?id=61d961aecc96ba4e157b",
+    "/js/dashboard~formula~material~matter~pack~package~packer~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~user.js?id=31d5e64926ce3e44819c"
 }
