--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=1ad08531350698a12897",
+    "/js/app.js": "/js/app.js?id=1c9f0f2110918774fdd0",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
     "/js/auth.forget.js": "/js/auth.forget.js?id=241c515e605a09009b80",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=d3306d4738f18769b6f1",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=74ac9fcc214b0d90ced0",
     "/js/auth.login.js": "/js/auth.login.js?id=d8810bd617eb34a525fe",
     "/js/auth.reset.js": "/js/auth.reset.js?id=8d3ce5169e971cba8541",
     "/js/auth.verify.js": "/js/auth.verify.js?id=3231ab6e1d42c731f62f",
@@ -11,18 +11,20 @@
     "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
     "/js/formula.js": "/js/formula.js?id=125bd8ea802e615da082",
     "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
-    "/js/material.js": "/js/material.js?id=0f19f84ba361efb4f75d",
+    "/js/material.js": "/js/material.js?id=4b4093dfb0fa0bc79943",
     "/js/matter.js": "/js/matter.js?id=5deaca7136e534f339bb",
     "/js/pack.js": "/js/pack.js?id=7565bccf7bbab4966094",
     "/js/package.js": "/js/package.js?id=1335c668e8edf19a1196",
     "/js/packer.js": "/js/packer.js?id=83cd18d87a1e3a602d31",
     "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
-    "/js/profile.js": "/js/profile.js?id=c21c8c9250d2bdb94807",
-    "/js/user.js": "/js/user.js?id=9c45ca42c31690f2d448",
+    "/js/profile.js": "/js/profile.js?id=c41e169a0a52e4716f1d",
+    "/js/user.js": "/js/user.js?id=3383e908ba3f0b0a6701",
     "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~user.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~user.js?id=61d961aecc96ba4e157b",
     "/js/dashboard~formula~material~matter~pack~package~packer~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~user.js?id=31d5e64926ce3e44819c",
     "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~profile.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~profile.js?id=b16ed7522469588362e2",
     "/js/dashboard~formula~material~matter~pack~package~packer~profile.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile.js?id=c808de8845aa687cf536",
     "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~packer~profile~user.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~packer~profile~user.js?id=dc4bae6c0ca2f22014fe",
-    "/js/dashboard~formula~material~matter~pack~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~packer~profile~user.js?id=ebe5074d22340e57af8f"
+    "/js/dashboard~formula~material~matter~pack~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~packer~profile~user.js?id=ebe5074d22340e57af8f",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~matter~pack~package~packer~profile~user.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~matter~pack~package~packer~profile~user.js?id=cf195aff2db2cf94dd4c",
+    "/js/dashboard~formula~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~matter~pack~package~packer~profile~user.js?id=50f0a28969d30f34bc09"
 }
