--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,30 +1,24 @@
 {
-    "/js/app.js": "/js/app.js?id=745e08e9009f50a3aa53",
+    "/js/app.js": "/js/app.js?id=654d9f2fecdb21ef6d5f",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
     "/js/auth.forget.js": "/js/auth.forget.js?id=241c515e605a09009b80",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=1e64831e7c439566c9a5",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=1e578e00fba504b908b8",
     "/js/auth.login.js": "/js/auth.login.js?id=d8810bd617eb34a525fe",
     "/js/auth.reset.js": "/js/auth.reset.js?id=8d3ce5169e971cba8541",
     "/js/auth.verify.js": "/js/auth.verify.js?id=3231ab6e1d42c731f62f",
     "/js/dashboard.js": "/js/dashboard.js?id=026c565d2edb600edf87",
     "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=09e235651da0494e8631",
     "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
-    "/js/formula.js": "/js/formula.js?id=939c51e7707542d1cd73",
+    "/js/formula.js": "/js/formula.js?id=45b127f07dccb139a84a",
     "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
-    "/js/material.js": "/js/material.js?id=444ab96be4a23332e666",
+    "/js/material.js": "/js/material.js?id=ac049ea4a09acbc46114",
     "/js/matter.js": "/js/matter.js?id=5deaca7136e534f339bb",
-    "/js/pack.js": "/js/pack.js?id=7565bccf7bbab4966094",
-    "/js/package.js": "/js/package.js?id=de6f70d7c10cc4a68152",
+    "/js/pack.js": "/js/pack.js?id=6cd435ae032c7220244c",
+    "/js/package.js": "/js/package.js?id=9742e6b0ba8ba14a5385",
     "/js/packer.js": "/js/packer.js?id=83cd18d87a1e3a602d31",
     "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
     "/js/profile.js": "/js/profile.js?id=c41e169a0a52e4716f1d",
-    "/js/user.js": "/js/user.js?id=3383e908ba3f0b0a6701",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~user.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~user.js?id=61d961aecc96ba4e157b",
-    "/js/dashboard~formula~material~matter~pack~package~packer~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~user.js?id=31d5e64926ce3e44819c",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~profile.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~profile.js?id=b16ed7522469588362e2",
-    "/js/dashboard~formula~material~matter~pack~package~packer~profile.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile.js?id=c808de8845aa687cf536",
+    "/js/user.js": "/js/user.js?id=4c4d9dd21b56d7655fe4",
     "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~packer~profile~user.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~packer~profile~user.js?id=65df58a0f1f21d3d680d",
-    "/js/dashboard~formula~material~matter~pack~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~packer~profile~user.js?id=ebe5074d22340e57af8f",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~matter~pack~package~packer~profile~user.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~matter~pack~package~packer~profile~user.js?id=cf195aff2db2cf94dd4c",
-    "/js/dashboard~formula~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~matter~pack~package~packer~profile~user.js?id=50f0a28969d30f34bc09"
+    "/js/dashboard~formula~material~matter~pack~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~packer~profile~user.js?id=ebe5074d22340e57af8f"
 }
