Fix bugs in ClientQueryScope trait

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,24 +1,22 @@
 {
-    "/js/app.js": "/js/app.js?id=58a8597e5fdd4c39a584",
+    "/js/app.js": "/js/app.js?id=65dfae5857242221b2cb",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
-    "/js/auth.forget.js": "/js/auth.forget.js?id=241c515e605a09009b80",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=0cfa90326364ff944bae",
-    "/js/auth.login.js": "/js/auth.login.js?id=d8810bd617eb34a525fe",
-    "/js/auth.reset.js": "/js/auth.reset.js?id=8d3ce5169e971cba8541",
-    "/js/auth.verify.js": "/js/auth.verify.js?id=3231ab6e1d42c731f62f",
-    "/js/dashboard.js": "/js/dashboard.js?id=026c565d2edb600edf87",
-    "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=cae296a9282ab3e3ffa4",
-    "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
-    "/js/formula.js": "/js/formula.js?id=401cf88531da118c5c9b",
-    "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
-    "/js/material.js": "/js/material.js?id=8954c8e7c254964ce9a1",
-    "/js/matter.js": "/js/matter.js?id=5deaca7136e534f339bb",
-    "/js/pack.js": "/js/pack.js?id=6cd435ae032c7220244c",
-    "/js/package.js": "/js/package.js?id=26d6272b9114dc70c821",
-    "/js/packer.js": "/js/packer.js?id=83cd18d87a1e3a602d31",
-    "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
-    "/js/profile.js": "/js/profile.js?id=c41e169a0a52e4716f1d",
-    "/js/user.js": "/js/user.js?id=4c4d9dd21b56d7655fe4",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~packer~profile~user.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~packer~profile~user.js?id=65df58a0f1f21d3d680d",
-    "/js/dashboard~formula~material~matter~pack~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~packer~profile~user.js?id=ebe5074d22340e57af8f"
+    "/js/auth.forget.js": "/js/auth.forget.js?id=6b08912da78d61d9ba5a",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=9c0a4d2ee81cf58849b4",
+    "/js/auth.login.js": "/js/auth.login.js?id=f6dcf850c1352f2d75ec",
+    "/js/auth.reset.js": "/js/auth.reset.js?id=09b3b8e14da19bda7ee5",
+    "/js/auth.verify.js": "/js/auth.verify.js?id=03d8e7f81b429a0f6765",
+    "/js/dashboard.js": "/js/dashboard.js?id=d0a45226c6b462bf88f3",
+    "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=9f226cd1ef8a240ed73a",
+    "/js/error.js": "/js/error.js?id=37c63176de9b2108f96c",
+    "/js/formula.js": "/js/formula.js?id=64a519642826b40635dc",
+    "/js/landing.js": "/js/landing.js?id=181855c974c6bb359724",
+    "/js/material.js": "/js/material.js?id=2d308a5e9445820d20ea",
+    "/js/matter.js": "/js/matter.js?id=cbe22cfdeb9b1d53ce6c",
+    "/js/pack.js": "/js/pack.js?id=db9c976d19f52e56f779",
+    "/js/package.js": "/js/package.js?id=c57090d1183278c8c06a",
+    "/js/packer.js": "/js/packer.js?id=abea2f2d159ea1d2cce3",
+    "/js/policy.js": "/js/policy.js?id=3ca71ada821cc5243155",
+    "/js/profile.js": "/js/profile.js?id=da03b8ba002b2e4fc186",
+    "/js/user.js": "/js/user.js?id=43cd5b97bc382392876c"
 }
