--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,22 +1,24 @@
 {
-    "/js/app.js": "/js/app.js?id=fa5876cea93a09b06279",
+    "/js/app.js": "/js/app.js?id=44b72b5cb99ca72cd90b",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
-    "/js/auth.forget.js": "/js/auth.forget.js?id=6b08912da78d61d9ba5a",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=9c0a4d2ee81cf58849b4",
-    "/js/auth.login.js": "/js/auth.login.js?id=f6dcf850c1352f2d75ec",
-    "/js/auth.reset.js": "/js/auth.reset.js?id=09b3b8e14da19bda7ee5",
-    "/js/auth.verify.js": "/js/auth.verify.js?id=03d8e7f81b429a0f6765",
-    "/js/dashboard.js": "/js/dashboard.js?id=a5c971463fa25973f25b",
-    "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=79043a0ae7c2e6c22c45",
-    "/js/error.js": "/js/error.js?id=37c63176de9b2108f96c",
-    "/js/formula.js": "/js/formula.js?id=64a519642826b40635dc",
-    "/js/landing.js": "/js/landing.js?id=181855c974c6bb359724",
-    "/js/material.js": "/js/material.js?id=aa7fa1cc594d869139d6",
-    "/js/matter.js": "/js/matter.js?id=cbe22cfdeb9b1d53ce6c",
-    "/js/pack.js": "/js/pack.js?id=db9c976d19f52e56f779",
-    "/js/package.js": "/js/package.js?id=d0786d65fdeb232065dc",
-    "/js/packer.js": "/js/packer.js?id=abea2f2d159ea1d2cce3",
-    "/js/policy.js": "/js/policy.js?id=3ca71ada821cc5243155",
-    "/js/profile.js": "/js/profile.js?id=da03b8ba002b2e4fc186",
-    "/js/user.js": "/js/user.js?id=43cd5b97bc382392876c"
+    "/js/auth.forget.js": "/js/auth.forget.js?id=241c515e605a09009b80",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=3b63132766099479070d",
+    "/js/auth.login.js": "/js/auth.login.js?id=d8810bd617eb34a525fe",
+    "/js/auth.reset.js": "/js/auth.reset.js?id=8d3ce5169e971cba8541",
+    "/js/auth.verify.js": "/js/auth.verify.js?id=3231ab6e1d42c731f62f",
+    "/js/dashboard.js": "/js/dashboard.js?id=641185d040f427203c2d",
+    "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=dd665a5d74b537c5fce7",
+    "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
+    "/js/formula.js": "/js/formula.js?id=862f09f3410bb6f2b68e",
+    "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
+    "/js/material.js": "/js/material.js?id=2bbde09f97b41d22c437",
+    "/js/matter.js": "/js/matter.js?id=9de6e267d83284977f88",
+    "/js/pack.js": "/js/pack.js?id=f6e4aa0d0d84ae54a19a",
+    "/js/package.js": "/js/package.js?id=573503c6d34b63ce8e42",
+    "/js/packer.js": "/js/packer.js?id=d32dcd4ea50d8e65bb6d",
+    "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
+    "/js/profile.js": "/js/profile.js?id=d6cd41387fc2f3f1c2ad",
+    "/js/user.js": "/js/user.js?id=0ca226a8c7977949e205",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~material~matter~pack~package~packer~profile~user.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~material~matter~pack~package~packer~profile~user.js?id=575401ab67f9074049cf",
+    "/js/dashboard~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~material~matter~pack~package~packer~profile~user.js?id=d5a2c5f7494e9ebab535"
 }
