Make recipe table portion editable

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,24 +1,25 @@
 {
-    "/js/app.js": "/js/app.js?id=57ae6b6b873470a23e51",
+    "/js/app.js": "/js/app.js?id=ca0024b03b04eedf01b5",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
     "/js/auth.forget.js": "/js/auth.forget.js?id=241c515e605a09009b80",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=3b63132766099479070d",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=097cbe6194c0a675a932",
     "/js/auth.login.js": "/js/auth.login.js?id=d8810bd617eb34a525fe",
     "/js/auth.reset.js": "/js/auth.reset.js?id=8d3ce5169e971cba8541",
     "/js/auth.verify.js": "/js/auth.verify.js?id=3231ab6e1d42c731f62f",
     "/js/dashboard.js": "/js/dashboard.js?id=641185d040f427203c2d",
     "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=dd665a5d74b537c5fce7",
     "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
-    "/js/formula.js": "/js/formula.js?id=a92f461bd5964a1131de",
+    "/js/formula.js": "/js/formula.js?id=c01135166e46a4bae3b6",
     "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
-    "/js/material.js": "/js/material.js?id=e20add151cf6849fbac5",
+    "/js/material.js": "/js/material.js?id=23ce8c95b8336078366a",
     "/js/matter.js": "/js/matter.js?id=9de6e267d83284977f88",
     "/js/pack.js": "/js/pack.js?id=f6e4aa0d0d84ae54a19a",
-    "/js/package.js": "/js/package.js?id=8de053d473c7b4a281e7",
+    "/js/package.js": "/js/package.js?id=56410dd5d43f8d10315e",
     "/js/packer.js": "/js/packer.js?id=d32dcd4ea50d8e65bb6d",
     "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
     "/js/profile.js": "/js/profile.js?id=d6cd41387fc2f3f1c2ad",
     "/js/user.js": "/js/user.js?id=0ca226a8c7977949e205",
     "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~material~matter~pack~package~packer~profile~user.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~material~matter~pack~package~packer~profile~user.js?id=575401ab67f9074049cf",
-    "/js/dashboard~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~material~matter~pack~package~packer~profile~user.js?id=d5a2c5f7494e9ebab535"
+    "/js/dashboard~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~material~matter~pack~package~packer~profile~user.js?id=d5a2c5f7494e9ebab535",
+    "/js/vendors~formula.js": "/js/vendors~formula.js?id=fb3488fe7b992e865c56"
 }
