--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=ca0024b03b04eedf01b5",
+    "/js/app.js": "/js/app.js?id=fb684d812e64ae364738",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
     "/js/auth.forget.js": "/js/auth.forget.js?id=241c515e605a09009b80",
     "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=097cbe6194c0a675a932",
@@ -9,17 +9,14 @@
     "/js/dashboard.js": "/js/dashboard.js?id=641185d040f427203c2d",
     "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=dd665a5d74b537c5fce7",
     "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
-    "/js/formula.js": "/js/formula.js?id=c01135166e46a4bae3b6",
+    "/js/formula.js": "/js/formula.js?id=903a2ca0a6242385a072",
     "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
     "/js/material.js": "/js/material.js?id=23ce8c95b8336078366a",
     "/js/matter.js": "/js/matter.js?id=9de6e267d83284977f88",
     "/js/pack.js": "/js/pack.js?id=f6e4aa0d0d84ae54a19a",
-    "/js/package.js": "/js/package.js?id=56410dd5d43f8d10315e",
+    "/js/package.js": "/js/package.js?id=532a54287cdc39ea4dd1",
     "/js/packer.js": "/js/packer.js?id=d32dcd4ea50d8e65bb6d",
     "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
     "/js/profile.js": "/js/profile.js?id=d6cd41387fc2f3f1c2ad",
-    "/js/user.js": "/js/user.js?id=0ca226a8c7977949e205",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~material~matter~pack~package~packer~profile~user.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~material~matter~pack~package~packer~profile~user.js?id=575401ab67f9074049cf",
-    "/js/dashboard~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~material~matter~pack~package~packer~profile~user.js?id=d5a2c5f7494e9ebab535",
-    "/js/vendors~formula.js": "/js/vendors~formula.js?id=fb3488fe7b992e865c56"
+    "/js/user.js": "/js/user.js?id=0ca226a8c7977949e205"
 }
